<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="act">Press the button to generate a random number</string>
    <string name="setDistParam">Set distribution parameters</string>
    <string name="setDistParamIcon">ƒ( θ )</string>
    <string name="setSeedParam">Create random seed</string>
    <string name="selDistr">Select Distribution</string>
    <string name="selSeeder">Select Seed Provider</string>
    <string name="startGenerating">Start Generating Random Data</string>
    <string name="distribution">Distribution: </string>
    <string name="seeder">Seeder: </string>
    <string name="app_name">RandGen</string>
    <string name="app_descr">Generate real-random numbers and pass phrases following various distributions. Entropy is provided by various methods</string>
    <string name="generate">Generate!</string>
    <string name="reseed">Re-seed</string><string name="from">from</string>
    <string name="numWords">Words in phrase</string>
    <string name="to">to</string>
    <string name="mean">Mean</string>
    <string name="std">Standard Deviation</string>
    <string name="lambda">Lambda (mean)</string>
    <string name="paramError">Invalid or missing parameters; please retry.</string>
    <string name="errNoDistr">Please select a distribution and seeder first</string>
    <string name="errNoAccelerometer">No accelerometer found. Random seed will be generated with the milliseconds time</string>
    <string name="errNoCompass">No compass found. Random seed will be generated with the milliseconds time</string>
    <string name="unifIntParam">Uniform Integer Parameters</string>
    <string name="passPhraseParam">Pass Phrase Parameters</string><string name="unifFloatParam">Uniform Decimal Parameters</string>
    <string name="poissonParam">Poisson Parameters</string>
    <string name="normalParam">Normal Decimal Parameters</string>
    <string name="takeAccelSeed">Please shake randomly the phone to produce random seed</string>
    <string name="takeCompassSeed">Please rotate randomly the phone to produce random seed</string>
    <string name="takeTouchSeed">Please move your finger in the gray screen to produce random seed</string>
    <string name="generationResults">RanGen has generated:</string>
    <string name="eula_title">License Agreement</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Don\'t Accept</string>
    <string name="allow_repeats">Allow repeated values?</string>
    <string name="copy_data">Copy Data</string>
    <string name="default_words">4</string>
    <string name="ok">OK</string>
</resources>
