<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    >
    <TextView  
  		  android:layout_width="fill_parent" 
 		   android:layout_height="wrap_content" 
 		   android:text="@string/selDistr"
 		   android:drawableLeft="@drawable/distr"
 		   android:textSize="17sp"
 		   android:drawablePadding="10dp"
 		   android:paddingLeft="10dp"
 		   android:layout_gravity="center"	   
 		   />
    
 	<Spinner
		android:id="@+id/distrSelect"
		android:layout_width="fill_parent" 
    	android:layout_height="60dp"
   		android:drawSelectorOnTop="true"
   		android:textSize="17sp"
    	/>
 	
    <TextView  
  	  android:layout_width="fill_parent" 
 	  android:layout_height="wrap_content" 
 	  android:text="@string/selSeeder"
 	  android:textSize="17sp"
 	  android:drawableLeft="@drawable/cards"
 	  android:drawablePadding="5dp"
 	  />
 	
 	<Spinner
 	    android:id="@+id/seedSelect"
 	    android:layout_width="fill_parent"
 	    android:layout_height="60dp"
 	    android:drawSelectorOnTop="true"
 	    android:textSize="17sp" />
	
<Button
	android:id="@+id/setDistributionParametersButton"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
	android:text="@string/setDistParam"
	android:drawableLeft="@drawable/parameter"/>
	
<Button
	android:id="@+id/setSeedButton"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
	android:text="@string/setSeedParam"
	android:drawableLeft="@drawable/cardselected"/>

<CheckBox
    android:id="@+id/chkAllowRepeats"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/allow_repeats" 
    android:checked = "true" />

<Button
    android:id="@+id/startGeneration"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:drawableLeft="@drawable/icon"
    android:text="@string/startGenerating" />
    
</LinearLayout>
