<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:orientation="vertical">
  
	<TextView android:layout_width="fill_parent"
 	 			android:layout_height="wrap_content"
 	 			android:id="@+id/notification"
 	 			android:text="@string/paramError"
 	 			android:visibility="gone" 
 	 			android:paddingBottom="10dp"/>
 	 			
	<LinearLayout
	  	xmlns:android="http://schemas.android.com/apk/res/android"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
 	 
 	 	<TextView
 	 	    android:layout_width="wrap_content"
 	 	    android:layout_height="wrap_content"
 	 	    android:text="@string/numWords" />

 	 	<EditText
 	 	    android:id="@+id/passPhraseWords"
 	 	    android:layout_width="65dp"
 	 	    android:layout_height="wrap_content"
 	 	    android:inputType="number"
 	 	    android:text="@string/default_words" >

 	 	    <requestFocus />
 	 	</EditText>
		
		<Button 
			android:text="@string/ok" 
			android:id="@+id/passPhraseOK" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>
