<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:orientation="vertical">
  
	<TextView android:layout_width="fill_parent"
 	 			android:layout_height="wrap_content"
 	 			android:id="@+id/notification"
 	 			android:text="@string/paramError"
 	 			android:visibility="gone" 
 	 			android:paddingBottom="10px"/>
	<LinearLayout
  		xmlns:android="http://schemas.android.com/apk/res/android"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
 	 	<TextView
			android:layout_width="40px" 
 			android:layout_height="wrap_content" 
			android:text="@string/mean"	/>
	  		
 		<EditText
			android:id="@+id/normalMean"
			android:layout_width="65px" 
 			android:layout_height="wrap_content" 
			android:numeric="decimal"/>
		
		<TextView
	 		android:layout_height="wrap_content" 
   	 		android:text="@string/std"
 	 		android:layout_marginLeft="10px"
			android:layout_width="70px"
			android:layout_marginTop="-10px"/>

		<EditText
			android:id="@+id/normalStd"
			android:layout_width="65px" 
			android:layout_height="wrap_content" 
			android:numeric="decimal"/>
		
		
		<Button 
			android:text="OK" 
			android:id="@+id/NormOK" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		
	</LinearLayout>
</LinearLayout>
